We don't keep junk in our drawers here at KPCC.

--- a/index.html
+++ b/index.html
@@ -760,78 +760,11 @@
         <span>Close</span>
       </label>
     </header>
-
-
-
     <div contents primary>
-      <ul>
-        <li>
-          <h4>Read the Stories</h4>
-          <a href="../unarmed-and-dangerous/">
-            <img src="http://a.scpr.org/i/9cf3a7ba7b2ffd1ce88786806b8dcd6d/111193-wide.jpg">
-            <h3>Unarmed and dangerous?</h3>
-            <p>One in four people shot by officers in L.A. County between 2010 and 2014 was unarmed.</p>
-          </a>
-        </li>
-        <li>
-          <h4>&nbsp;</h4>
-          <a href="../a-call-for-help/">
-            <img src="http://a.scpr.org/i/59fdeac8d27f0a2ba4dfdb0ee84155d1/113970-wide.jpg">
-            <h3>A call for help</h3>
-            <p> Some of the most troubling police shootings  in L.A. County involved people in mental health crisis.</p>
-          </a>
-        </li>
-        <li>
-          <h4 class="media-list__heading media-list__heading--collapse">&nbsp;</h4>
-          <a href="../i-see-heroes/">
-            <img src="http://a.scpr.org/i/2e2d8958b2fd7a8ff7d00b543ab8742c/114114-wide.jpg">
-            <h3>‘I see heroes’</h3>
-            <p>Among the police shootings reviewed by KPCC were dozens of instances where officers intervened to stop violent criminals.</p>
-          </a>
-        </li>
-        <li>
-          <a href="../black-people-shot-at-disproportionate-rate/">
-            <img src="http://a.scpr.org/i/1656e391d2885c7a57a2d51a24d55ee0/114344-wide.jpg">x
-            <h3>Black people shot at disproportionate rate</h3>
-            <p>Black people were shot by police at three times their numbers in the population, compared to other races.</p>
-          </a>
-        </li>
-        <li>
-          <a href="../the-black-box/">
-            <img src="http://a.scpr.org/i/cc752cd44ba51473a6bcba83b135079f/62466-wide.jpg">
-            <h3>Police Shooting Investigations: The black box</h3>
-            <p>Law enforcement agencies aren't required to report data on police shootings, and few do.</p>
-          </a>
-        </li>
-        <li></li>
-      </ul>
+      PRIMARY CONTENTS
     </div>
-
     <div contents secondary>
-      <h4>Learn more</h4>
-      <ul>
-        <li>
-          <a href="../../" class="media__link">
-            <div class="media__image-container--widescreen">
-              <img src="http://a.scpr.org/i/1c1fd6dd6369c84c921d64858741179d/100794-wide.jpg">
-            </div>
-            <h3>Visual story</h3>
-          </a>
-        </li>
-        <li>
-          <a href="../../explore/" class="media__link">
-            <div class="media__image-container--widescreen">
-              <img src="http://a.scpr.org/i/dbaeac58f86d222bb860ce1938ee5aec/114232-wide.jpg">
-            </div>
-            <h3>Explore the data</h3>
-          </a>
-        </li>
-        <li>
-          <a href="../how-we-did-it/" class="media__link media__link--bold">How we did it</a>
-          <a href="http://www.scpr.org/issues/officer-involved" class="media__link media__link--bold">See all coverage from the&nbsp;series</a>
-          <a href="http://www.scpr.org/network/questions/officerinvolved/" class="media__link media__link--bold">How do you talk about police at home?</a>
-        </li>
-      </ul>
+      <h4>SECONDARY CONTENTS</h4>
     </div>
   </nav>
 
