--- a/index.html
+++ b/index.html
@@ -701,6 +701,37 @@
   </article>
 
 
+  <hr thick>
+
+
+  <form representative>
+    <h2>Contact your state representatives about CalWORKs</h2>
+    <span>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
+    <hr>
+    <div lookup>
+      <h3>Look Up Your Representatives</h3>
+      <input type="text" placeholder="Enter an address here" />
+      <section>
+        <button lookup>Look Up</button>
+        <span>&nbsp;OR&nbsp;</span>
+        <button location>Use My Location</button>
+      </section>
+      <output></output>
+    </div>
+    <div suggestion>
+      <h3>Suggested Message</h3>
+      <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie molestie neque vel volutpat. Sed suscipit mauris eget enim lobortis, consectetur interdum nunc sodales. Nam viverra mi sit amet enim pellentesque dictum. Cras rutrum ultricies ante, non rutrum enim laoreet ut. Sed at viverra metus. Aenean condimentum vel ipsum ut laoreet. Curabitur id commodo neque. Cras pellentesque mauris quis velit congue mollis.</p>
+
+        <p>Nam leo tellus, pulvinar a lectus quis, ultricies gravida erat. Donec eu lectus nisi. Donec ut commodo justo, in aliquam eros. Nullam tincidunt tempor velit et bibendum. Maecenas eu mattis tellus. Curabitur aliquet velit nec porta euismod. Donec sed dui et est laoreet commodo sit amet sed tellus. Etiam non lorem quis velit maximus maximus. Mauris blandit dictum rutrum. Sed ultrices ex sed volutpat dictum.</p>
+
+        <p>Sed egestas pulvinar ullamcorper. Praesent turpis neque, ultricies et venenatis non, fermentum ac purus. Quisque luctus ante vel libero auctor, pharetra finibus tellus eleifend. Quisque maximus malesuada augue pretium fermentum. Ut lobortis aliquet eros, eget semper eros molestie eget. Morbi rhoncus pellentesque orci, vitae viverra ipsum rhoncus id.</p>
+      </section>
+      <button>Copy this text</button>
+    </div>
+  </form>
+
+
   <footer>
     <div>
       <div>
@@ -760,12 +791,32 @@
         <span>Close</span>
       </label>
     </header>
-    <div contents primary>
-      PRIMARY CONTENTS
+  <form representative>
+    <h2>Contact your state representatives about CalWORKs</h2>
+    <span>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
+    <hr>
+    <div lookup>
+      <h3>Look Up Your Representatives</h3>
+      <input type="text" placeholder="Enter an address here" />
+      <section>
+        <button lookup>Look Up</button>
+        <span>&nbsp;OR&nbsp;</span>
+        <button location>Use My Location</button>
+      </section>
+      <output></output>
     </div>
-    <div contents secondary>
-      <h4>SECONDARY CONTENTS</h4>
+    <div suggestion>
+      <h3>Suggested Message</h3>
+      <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie molestie neque vel volutpat. Sed suscipit mauris eget enim lobortis, consectetur interdum nunc sodales. Nam viverra mi sit amet enim pellentesque dictum. Cras rutrum ultricies ante, non rutrum enim laoreet ut. Sed at viverra metus. Aenean condimentum vel ipsum ut laoreet. Curabitur id commodo neque. Cras pellentesque mauris quis velit congue mollis.</p>
+
+        <p>Nam leo tellus, pulvinar a lectus quis, ultricies gravida erat. Donec eu lectus nisi. Donec ut commodo justo, in aliquam eros. Nullam tincidunt tempor velit et bibendum. Maecenas eu mattis tellus. Curabitur aliquet velit nec porta euismod. Donec sed dui et est laoreet commodo sit amet sed tellus. Etiam non lorem quis velit maximus maximus. Mauris blandit dictum rutrum. Sed ultrices ex sed volutpat dictum.</p>
+
+        <p>Sed egestas pulvinar ullamcorper. Praesent turpis neque, ultricies et venenatis non, fermentum ac purus. Quisque luctus ante vel libero auctor, pharetra finibus tellus eleifend. Quisque maximus malesuada augue pretium fermentum. Ut lobortis aliquet eros, eget semper eros molestie eget. Morbi rhoncus pellentesque orci, vitae viverra ipsum rhoncus id.</p>
+      </section>
+      <button>Copy this text</button>
     </div>
+  </form>
   </nav>
 
 
