--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Born Broke | 89.3 KPCC</title>
+    <title>Broke | 89.3 KPCC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Most officers will go their entire career without shooting at anyone. Among the shootings that took place during the five years KPCC reviewed, many involved life-saving acts of bravery." />
     <meta property="og:site_name" content="KPCC" />
@@ -36,14 +36,14 @@
     <div branding>
       <a logo href="http://www.scpr.org/"><img src="../../images/logo_kpcc-white.svg" alt="89.3 KPCC"></a>
       <span pipe></span>
-      <h3>Born Broke</h3>
+      <h3>Broke</h3>
       <label for="nav-drawer-toggler-checkbox">
-        Born Broke
+        Broke
       </label>
     </div>
     <label open for="nav-drawer-toggler-checkbox">
       <img src="../../images/icon_plus.svg">
-      <span>Explore</span>
+      <span>Political Engagement Tool</span>
     </label>
   </header>
 
@@ -51,9 +51,9 @@
     <div branding>
       <a logo href="http://www.scpr.org/"><img src="../../images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
       <span pipe></span>
-      <h3>Born Broke</h3>
+      <h3>Broke</h3>
       <label for="nav-drawer-toggler-checkbox">
-        Born Broke
+        Broke
       </label>
     </div>
 
@@ -102,14 +102,14 @@
 
     <label open for="nav-drawer-toggler-checkbox">
       <img src="../../images/icon_plus.svg">
-      <span>Explore</span>
+      <span>Political Engagement Tool</span>
     </label>
   </header>
 
   <article>
 
 
-    <div class="hero">
+    <div top-bound class="hero">
       <h1 class="headline headline--giant headline--light">Headline for homeless story</h1>
     </div>
 
@@ -668,7 +668,7 @@
       <p>But some of the homeless get to jump the line. The city of Los Angeles set aside 4,811 of its vouchers for homeless people last year. (2016 or 2015?)</p>
 
       <figure>
-        <img src="images/maria-carrera-002.jpg" alt="Jean Thaxton, Michael Nida's aunt">
+        <img src="images/maria-carrera-002.jpg" alt="Carrera family photo.">
         <figcaption>
           A photo of Carrera's family in their Anaheim home on Monday, June 20, 2016.  The family has lived in the four-bedroom house for two years through the Housing Assistance Pilot Program.
           <address>Maya Sugarman | KPCC</address>
@@ -701,7 +701,18 @@
   </article>
 
 
-  <hr thick>
+  <aside feedback>
+    <div description>
+      You're seeing KPCC's new homepage design.
+    </div>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScxvZ6mfw39MkNij8qsTsda_01TIRVHRapHlD_KXhJl3zpPBQ/viewform">
+      Tell Us What You Think
+    </a>
+  </aside>
+  <div feedback-shadow></div>
+
+
+  <hr thick bottom-bound>
 
 
   <form representative>
@@ -781,9 +792,9 @@
       <div branding>
         <a logo href="http://www.scpr.org/"><img src="../../images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
         <span pipe></span>
-        <h3>Born Broke</h3>
+        <h3>Broke</h3>
         <label for="nav-drawer-toggler-checkbox">
-          Born Broke
+          Broke
         </label>
       </div>
       <label close for="nav-drawer-toggler-checkbox">
