--- a/index.html
+++ b/index.html
@@ -710,28 +710,30 @@
     <hr>
     <div lookup>
       <h3>Look Up Your Representatives</h3>
-      <input autofocus type="text" id="addressSearch" placeholder="Enter an address here" />
-
-      <input class="hidden" type="text" name="lat" id="latitudeSearch">
-      <input class="hidden" type="text" name="lng" id="longitudeSearch">
-
+      <input type="text" id="addressSearch" placeholder="Enter an address here" />
       <section>
         <button lookup id="submit">Look Up</button>
         <span>&nbsp;OR&nbsp;</span>
         <button location id="findme">Use My Location</button>
       </section>
-      <output></output>
+      <output>
+        <div class="data-loading hidden">
+          <h3><em>Loading application data</em></h3>
+          <img src="images/icon_data_loader.gif" alt="Data is loading" width="35%" />
+        </div>
+        <div id="output" class="output-display"></div>
+      </output>
+      <input class="hidden" type="text" name="lat" id="latitudeSearch">
+      <input class="hidden" type="text" name="lng" id="longitudeSearch">
     </div>
     <div suggestion>
       <h3>Suggested Message</h3>
       <section>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie molestie neque vel volutpat. Sed suscipit mauris eget enim lobortis, consectetur interdum nunc sodales. Nam viverra mi sit amet enim pellentesque dictum. Cras rutrum ultricies ante, non rutrum enim laoreet ut. Sed at viverra metus. Aenean condimentum vel ipsum ut laoreet. Curabitur id commodo neque. Cras pellentesque mauris quis velit congue mollis.</p>
-
         <p>Nam leo tellus, pulvinar a lectus quis, ultricies gravida erat. Donec eu lectus nisi. Donec ut commodo justo, in aliquam eros. Nullam tincidunt tempor velit et bibendum. Maecenas eu mattis tellus. Curabitur aliquet velit nec porta euismod. Donec sed dui et est laoreet commodo sit amet sed tellus. Etiam non lorem quis velit maximus maximus. Mauris blandit dictum rutrum. Sed ultrices ex sed volutpat dictum.</p>
-
         <p>Sed egestas pulvinar ullamcorper. Praesent turpis neque, ultricies et venenatis non, fermentum ac purus. Quisque luctus ante vel libero auctor, pharetra finibus tellus eleifend. Quisque maximus malesuada augue pretium fermentum. Ut lobortis aliquet eros, eget semper eros molestie eget. Morbi rhoncus pellentesque orci, vitae viverra ipsum rhoncus id.</p>
       </section>
-      <button>Copy this text</button>
+      <button copy id="copy">Copy this text</button>
     </div>
   </form>
 
@@ -879,7 +881,6 @@
       <!-- end comscore stats -->
 
   <script src="//maps.google.com/maps/api/js?key=AIzaSyAtS1OYyuRY0inb23BK0nuGId3FiOC6Rb8&libraries=places"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/geocomplete/1.4/jquery.geocomplete.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
   <script src="index.js"></script>
   </body>
