Revise the feedback block for a better tomorrow.

--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
 
           <p>But some of the homeless get to jump the line. The city of Los Angeles set aside 4,811 of its vouchers for homeless people last year. (2016 or 2015?)</p>
 
-          <figure>
+          <figure bottom-bound>
             <img src="images/maria-carrera-002.jpg" alt="Carrera family photo.">
             <figcaption>
               A photo of Carrera's family in their Anaheim home on Monday, June 20, 2016.  The family has lived in the four-bedroom house for two years through the Housing Assistance Pilot Program.
@@ -774,10 +774,7 @@
       </article>
 
 
-      <div feedback-shadow></div>
-
-
-      <hr thick bottom-bound>
+      <hr thick>
 
 
       <form representative>
