Add blockquote share icons.

--- a/index.html
+++ b/index.html
@@ -241,6 +241,16 @@
         </blockquote>
 
 
+        <div share>
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+          </a>
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+          </a>
+        </div>
+
+
         <section>
           <p>Her death is a rare, tragic result of a growing problem: California is failing to keep parents with young children from slipping into extreme poverty and ultimately, homelessness.</p>
 
@@ -478,6 +488,16 @@
         </blockquote>
 
 
+        <div share>
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+          </a>
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+          </a>
+        </div>
+
+
         <section>
           <p>“L.A. needs to have a serious heart change,” said Andy Bales, the shelter’s CEO.</p>
 
@@ -569,6 +589,16 @@
         </blockquote>
 
 
+        <div share>
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+          </a>
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+          </a>
+        </div>
+
+
         <hr fancy>
 
 
@@ -591,6 +621,16 @@
         <blockquote>
           <p>We're not even come close to making up for what we haven't provided over the last 25 years to CalWORKs recipients.</p>
         </blockquote>
+
+
+        <div share>
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+          </a>
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+          </a>
+        </div>
 
 
         <section>
@@ -617,6 +657,16 @@
         <blockquote>
           <p>(The Brown Administration has to decide if) leading a state with the highest child poverty rate in the nation is what they wish to have as a part of their legacy.  If I were him, I would not.</p>
         </blockquote>
+
+
+        <div share>
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+          </a>
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+          </a>
+        </div>
 
 
         <section>
@@ -694,6 +744,16 @@
         </blockquote>
 
 
+        <div share>
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+          </a>
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+          </a>
+        </div>
+
+
         <section>
 
           <figure>
@@ -725,6 +785,16 @@
         <blockquote>
           <p>We've seen families bounce from four to five programs.  The truth is they require a longer level of support.</p>
         </blockquote>
+
+
+        <div share>
+          <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+          </a>
+          <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
+            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+          </a>
+        </div>
 
 
         <section>
