--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
           </label>
         </header>
         <div contents>
+
           <form representative>
             <h2>Contact your state representatives about CalWORKs</h2>
             <span>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
@@ -162,9 +163,18 @@
             <div suggestion>
               <h3>Suggested Message</h3>
               <section>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie molestie neque vel volutpat. Sed suscipit mauris eget enim lobortis, consectetur interdum nunc sodales. Nam viverra mi sit amet enim pellentesque dictum. Cras rutrum ultricies ante, non rutrum enim laoreet ut. Sed at viverra metus. Aenean condimentum vel ipsum ut laoreet. Curabitur id commodo neque. Cras pellentesque mauris quis velit congue mollis.</p>
-                <p>Nam leo tellus, pulvinar a lectus quis, ultricies gravida erat. Donec eu lectus nisi. Donec ut commodo justo, in aliquam eros. Nullam tincidunt tempor velit et bibendum. Maecenas eu mattis tellus. Curabitur aliquet velit nec porta euismod. Donec sed dui et est laoreet commodo sit amet sed tellus. Etiam non lorem quis velit maximus maximus. Mauris blandit dictum rutrum. Sed ultrices ex sed volutpat dictum.</p>
-                <p>Sed egestas pulvinar ullamcorper. Praesent turpis neque, ultricies et venenatis non, fermentum ac purus. Quisque luctus ante vel libero auctor, pharetra finibus tellus eleifend. Quisque maximus malesuada augue pretium fermentum. Ut lobortis aliquet eros, eget semper eros molestie eget. Morbi rhoncus pellentesque orci, vitae viverra ipsum rhoncus id.</p>
+                <p>I'm concerned about growing family homelessness in California.</p>
+                <p>Public radio KPCC is reporting that:<br/>
+                <ul>
+                    <li>Nearly 60,000 families called L.A. County's 2011 line for help finding emergency shelter in 2015. And women and children surpassed the number of single men seeking refuge at Los Angeles' Union Rescue Mission on Skid Row last year&mdash;the first time that's happened in its 125-year history.</li>
+                    <br/>
+                    <li>Since 2010, eight infants identified by Los Angles County officials as homeless died sleeping in conditions experts call unsuitable, but were the families only option.</li>
+                    <br/>
+                    <li>Harvest House, in Venice, can take in about two dozen pregnant women at a time. Workers there estimate they had to turn away about 500 pregnant women last year.</li>
+                    <br/>
+                    <li>Orange and San Bernardino county school officials report the number of students without stable housing tripled over the past decade, to 26,064 in Orange County public schools and 35,165 in San Bernardino. Los Angeles public schools have identified 54,916 homeless students.</li>
+                </ul>
+                <p>What are you doing to reduce the number of children and families in my community who become homeless?</p>
               </section>
               <button copy id="copy">Copy this text</button>
             </div>
@@ -986,6 +996,8 @@
       </noscript>
       <!-- end comscore stats -->
 
+  <script src="//maps.google.com/maps/api/js?key=AIzaSyAtS1OYyuRY0inb23BK0nuGId3FiOC6Rb8&libraries=places"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
   <script src="index.js"></script>
   </body>
 </html>
