Work on engagement tool input styling.

--- a/index.html
+++ b/index.html
@@ -139,15 +139,17 @@
         <div contents>
           <form representative>
             <h2>Contact your state representatives about CalWORKs</h2>
-            <span>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
+            <span description>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
             <hr>
             <div lookup>
               <h3>Look Up Your Representatives</h3>
-              <input type="text" id="addressSearch" placeholder="Enter an address here" />
-              <section>
-                <button lookup id="submit">Look Up</button>
-                <span>&nbsp;OR&nbsp;</span>
-                <button location id="findme">Use My Location</button>
+              <section inputs>
+                <input type="text" id="addressSearch" placeholder="Enter an address here" />
+                <section buttons>
+                  <button lookup id="submit">Look Up</button>
+                  <span>&nbsp;OR&nbsp;</span>
+                  <button location id="findme">Use My Location</button>
+                </section>
               </section>
               <output>
                 <div class="data-loading hidden">
@@ -855,15 +857,17 @@
 
       <form representative>
         <h2>Contact your state representatives about CalWORKs</h2>
-        <span>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
+        <span description>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
         <hr>
         <div lookup>
           <h3>Look Up Your Representatives</h3>
-          <input type="text" id="addressSearch" placeholder="Enter an address here" />
-          <section>
-            <button lookup id="submit">Look Up</button>
-            <span>&nbsp;OR&nbsp;</span>
-            <button location id="findme">Use My Location</button>
+          <section inputs>
+            <input type="text" id="addressSearch" placeholder="Enter an address here" />
+            <section buttons>
+              <button lookup id="submit">Look Up</button>
+              <span>&nbsp;OR&nbsp;</span>
+              <button location id="findme">Use My Location</button>
+            </section>
           </section>
           <output>
             <div class="data-loading hidden">
