--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
           <img src="http://b.scorecardresearch.com/p?c1=2&c2=6035974&c3=&c4=&c5=&c6=&c15=&cv=2.0&cj=1" />
       </noscript>
       <!-- end comscore stats -->
-
+  <script src="//maps.google.com/maps/api/js?key=AIzaSyAtS1OYyuRY0inb23BK0nuGId3FiOC6Rb8&libraries=places"></script>
   <script src="index.js"></script>
   </body>
 </html>
