--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:description" content="Most officers will go their entire career without shooting at anyone. Among the shootings that took place during the five years KPCC reviewed, many involved life-saving acts of bravery." />
     <link rel="shortcut icon" href="../../favicon.ico">
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./index.css">
 
     <!-- Load web fonts -->
     <script src="https://use.typekit.net/cka2qre.js"></script>
@@ -981,6 +981,6 @@
       </noscript>
       <!-- end comscore stats -->
   <script src="//maps.google.com/maps/api/js?key=AIzaSyAtS1OYyuRY0inb23BK0nuGId3FiOC6Rb8&libraries=places"></script>
-  <script src="index.js"></script>
+  <script src="./index.js"></script>
   </body>
 </html>
