updates the index file to distinguish between forms

--- a/index.html
+++ b/index.html
@@ -137,8 +137,7 @@
           </label>
         </header>
         <div contents>
-
-          <form representative>
+          <form representative id="draw-form" class="inactive">
             <h2>Contact your state representatives about CalWORKs</h2>
             <span>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
             <hr>
@@ -863,7 +862,7 @@
       <hr thick>
 
 
-      <form representative>
+      <form representative id="page-form" class="active">
         <h2>Contact your state representatives about CalWORKs</h2>
         <span>Use this tool to look up your state senator and assemblymember.  Then email, call, or write them about how you feel about the impact of CalWORKs on Southern California families.</span>
         <hr>
