Add copypaste function to engagement tool.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <p>Nam leo tellus, pulvinar a lectus quis, ultricies gravida erat. Donec eu lectus nisi. Donec ut commodo justo, in aliquam eros. Nullam tincidunt tempor velit et bibendum. Maecenas eu mattis tellus. Curabitur aliquet velit nec porta euismod. Donec sed dui et est laoreet commodo sit amet sed tellus. Etiam non lorem quis velit maximus maximus. Mauris blandit dictum rutrum. Sed ultrices ex sed volutpat dictum.</p>
                 <p>Sed egestas pulvinar ullamcorper. Praesent turpis neque, ultricies et venenatis non, fermentum ac purus. Quisque luctus ante vel libero auctor, pharetra finibus tellus eleifend. Quisque maximus malesuada augue pretium fermentum. Ut lobortis aliquet eros, eget semper eros molestie eget. Morbi rhoncus pellentesque orci, vitae viverra ipsum rhoncus id.</p>
               </section>
-              <button copy id="copy">Copy this text</button>
+              <button copy type="button" data-clipboard-target="div[suggestion]">Copy this text</button>
             </div>
           </form>
         </div>
@@ -886,7 +886,7 @@
             <p>Nam leo tellus, pulvinar a lectus quis, ultricies gravida erat. Donec eu lectus nisi. Donec ut commodo justo, in aliquam eros. Nullam tincidunt tempor velit et bibendum. Maecenas eu mattis tellus. Curabitur aliquet velit nec porta euismod. Donec sed dui et est laoreet commodo sit amet sed tellus. Etiam non lorem quis velit maximus maximus. Mauris blandit dictum rutrum. Sed ultrices ex sed volutpat dictum.</p>
             <p>Sed egestas pulvinar ullamcorper. Praesent turpis neque, ultricies et venenatis non, fermentum ac purus. Quisque luctus ante vel libero auctor, pharetra finibus tellus eleifend. Quisque maximus malesuada augue pretium fermentum. Ut lobortis aliquet eros, eget semper eros molestie eget. Morbi rhoncus pellentesque orci, vitae viverra ipsum rhoncus id.</p>
           </section>
-          <button copy id="copy">Copy this text</button>
+          <button copy type="button" data-clipboard-target="div[suggestion]">Copy this text</button>
         </div>
       </form>
 
