--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
 
         <figure>
-          <img src="images/allan-and-ashley-008.jpg" alt="LAPD Medal of Valor">
+          <img src="http://a.scpr.org/i/515c6479a08c532b47779c2cb951b80a/148416-full.jpg" alt="LAPD Medal of Valor">
           <figcaption>
             Lackee, left, and boyfriend Allan Salvago hold their 1-year-old son, Allan Jr., outside their R.V. at Panorama Park in Panorama City on Thursday morning, Sept. 1, 2016.  Every 72 hours, the family must move the R.V. 100 feet to avoid a ticket from city parking enforcement.
             <address>Maya Sugarman / KPCC</address>
@@ -414,10 +414,10 @@
           <p>“We needed a place,” Monteagudo said. And they didn’t want to leave the L.A. doctors who were caring for the baby.</p>
 
           <figure>
-            <img src="images/allan-and-ashley-009.jpg" alt="Jean Thaxton, Michael Nida's aunt">
+            <img src="http://a.scpr.org/i/ce436cb91c9976ff89f03ab08947eea9/148417-eight.jpg">
             <figcaption>
               One-year-old Allan Salvago Jr. plays with his toys outside his family's R.V. at Panorama Park on Thursday morning, Sept. 1, 2016.  Before he was born, A.J. was diagnosed with spina bifida, a serious neurological condition.
-              <address>Maya Sugarman | KPCC</address>
+              <address>Maya Sugarman/KPCC</address>
             </figcaption>
           </figure>
 
@@ -540,10 +540,10 @@
 
 
         <figure>
-          <img src="images/TANDRADIXON-122116-mls042.jpg" alt="LAPD Medal of Valor">
+          <img src="http://a.scpr.org/i/051fbf04b0f3081595f6bc1f5d222b6e/148477-full.jpg">
           <figcaption>
             Tandra Dixon's two-year-old son, J.J., looks out the front door of their South Los Angeles home on Wednesday afternoon, Dec. 21, 2016.  In November, Dixon and her five children moved into this two-bedroom apartment.
-            <address>Maya Sugarman | KPCC</address>
+            <address>Maya Sugarman/KPCC</address>
           </figcaption>
         </figure>
 
@@ -714,7 +714,7 @@
 
 
         <figure>
-          <img src="images/maria-carrera-002.jpg" alt="LAPD Medal of Valor">
+          <img src="http://a.scpr.org/i/0f15cdc567c8579df30e13dbd57fcd14/148462-full.jpg">
           <figcaption>
             Maria Carrera spends time with her children during a hot summer day in their fou-bedroom apartment in Anaheim, Calif. on Monday, June 20, 2016.  A rapid rehousing program paid for most of the $2,400 rent.  The Carrera family has since moved to a new home after receiving a Section 8 voucher.
             <address>Maya Sugarman/KPCC</address>
@@ -768,10 +768,10 @@
         <section>
 
           <figure>
-            <img src="images/maria-carrera-003.jpg" alt="Jean Thaxton, Michael Nida's aunt">
+            <img src="http://a.scpr.org/i/eb52274ad53682fdef0576da36eac6f8/148464-full.jpg">
             <figcaption>
               Sixteen-year-old Alexandra Lazaro, left, sits on her bed in her family's four-bedroom apartment in Anaheim, Calif. on Monday, June 20, 2016.  Lazaro, who is now in her junior year of high school, says her grades suffered while her family bounced from shelter to shelter.
-              <address>Maya Sugarman | KPCC</address>
+              <address>Maya Sugarman/KPCC</address>
             </figcaption>
           </figure>
 
@@ -828,10 +828,10 @@
           <p>But some of the homeless get to jump the line. The city of Los Angeles set aside 4,811 of its vouchers for homeless people last year. (2016 or 2015?)</p>
 
           <figure bottom-bound>
-            <img src="images/maria-carrera-002.jpg" alt="Carrera family photo.">
+            <img src="http://a.scpr.org/i/81bbaed5d6dc19f14e9adc5da809bd7b/148459-eight.jpg" alt="Carrera family photo.">
             <figcaption>
               A photo of Carrera's family in their Anaheim home on Monday, June 20, 2016.  The family has lived in the four-bedroom house for two years through the Housing Assistance Pilot Program.
-              <address>Maya Sugarman | KPCC</address>
+              <address>Maya Sugarman/KPCC</address>
             </figcaption>
           </figure>
 
