--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
 
 
       <footer>
-        <div>
+        <div row>
           <div>
             <span title>REPORTING:&nbsp;</span> <address>Priska Neely</address><span comma>,&nbsp;</span><address>Rina Palta</address>
           </div>
@@ -928,7 +928,7 @@
           </div>
         </div>
 
-        <div>
+        <div row>
           <div>
             <span title>ART DIRECTION AND UX DESIGN:&nbsp;</span> <span>Katie Briggs</span>
           </div>
@@ -940,7 +940,7 @@
           </div>
         </div>
 
-        <div>
+        <div row>
           <div>
             <span title>DIGITAL ENGAGEMENT AND PROMOTION:&nbsp;</span> <address>Brianna Lee</address><span comma>,&nbsp;</span><address>Eric Zassenhaus</address>
           </div>
