Fix compilation task and add images to the compilation process with cache-busting.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <header top>
         <div branding>
-          <a logo href="http://www.scpr.org/"><img src="../../images/logo_kpcc-white.svg" alt="89.3 KPCC"></a>
+          <a logo href="http://www.scpr.org/"><img src="./images/logo_kpcc-white.svg" alt="89.3 KPCC"></a>
           <span pipe></span>
           <h3>Broke</h3>
           <span tagline>: Why more california families are becoming homeless</span>
@@ -49,7 +49,7 @@
           </label>
         </div>
         <label open for="nav-drawer-toggler-checkbox">
-          <img src="../../images/icon_plus.svg">
+          <img src="./images/icon_plus.svg">
           <span>Political Engagement Tool</span>
         </label>
       </header>
@@ -60,7 +60,7 @@
 
       <header fixed>
         <div branding>
-          <a logo href="http://www.scpr.org/"><img src="../../images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
+          <a logo href="http://www.scpr.org/"><img src="./images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
           <span pipe></span>
           <h3>Broke</h3>
           <span tagline>: Why more california families are becoming homeless</span>
@@ -76,10 +76,10 @@
               <div class="jp-controls-holder">
                 <div class="jp-controls">
                   <button class="jp-play" role="button" tabindex="0">
-                    <img src="../../images/ctrl_audio-play-small.svg" alt="Play">
+                    <img src="./images/ctrl_audio-play-small.svg" alt="Play">
                   </button>
                   <button class="jp-pause" role="button" tabindex="0">
-                    <img src="../../images/ctrl_audio-pause-small.svg" alt="Pause">
+                    <img src="./images/ctrl_audio-pause-small.svg" alt="Pause">
                   </button>
                 </div>
                 <div class="jp-title" aria-label="title">&nbsp;</div>
@@ -95,14 +95,14 @@
             <div class="jp-volume-controls">
               <div class="volume">
                 <button class="jp-mute" role="button" tabindex="0">
-                  <img src="../../images/ctrl_volume-mute.svg" alt="Mute">
+                  <img src="./images/ctrl_volume-mute.svg" alt="Mute">
                 </button>
                 <button class="jp-volume-max hidden" role="button" tabindex="0">
-                  <img src="../../images/ctrl_volume-max.svg" alt="Max Volume">
+                  <img src="./images/ctrl_volume-max.svg" alt="Max Volume">
                 </button>
               </div>
               <button class="jp-stop" role="button" tabindex="0">
-                <img src="../../images/ctrl_audio-close.svg" alt="Stop">
+                <img src="./images/ctrl_audio-close.svg" alt="Stop">
               </button>
             </div>
             <div class="jp-no-solution">
@@ -114,7 +114,7 @@
 
 
         <label open for="nav-drawer-toggler-checkbox">
-          <img src="../../images/icon_plus.svg">
+          <img src="./images/icon_plus.svg">
           <span>Political Engagement Tool</span>
         </label>
       </header>
@@ -123,7 +123,7 @@
       <nav drawer id="seriesMenu">
         <header>
           <div branding>
-            <a logo href="http://www.scpr.org/"><img src="../../images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
+            <a logo href="http://www.scpr.org/"><img src="./images/logo_kpcc-black.svg" alt="89.3 KPCC"></a>
             <span pipe></span>
             <h3>Broke</h3>
             <span tagline>: Why more california families are becoming homeless</span>
@@ -132,7 +132,7 @@
             </label>
           </div>
           <label close for="nav-drawer-toggler-checkbox">
-            <img src="../../images/icon_close.svg" alt="Close">
+            <img src="./images/icon_close.svg" alt="Close">
             <span>Close</span>
           </label>
         </header>
@@ -196,10 +196,10 @@
 
         <div share-story>
           <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+            <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
           <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+            <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
 
@@ -254,10 +254,10 @@
 
         <div share>
           <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+            <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
           <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+            <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
 
@@ -283,10 +283,10 @@
           <hr />
           <h3>Maximum monthly CalWORKs check for family of three (2007-2016)</h3>
           <img large
-            src="../../images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
+            src="./images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
             alt="Maximum monthly CalWORKs check for family of three (2007-2016)">
           <img small
-            src="../../images/charts/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL.png"
+            src="./images/charts/Maximum_monthly_CalWORKs_check_for_family_of_three_in_California_07-16_-_SMALL.png"
             alt="Maximum monthly CalWORKs check for family of three (2007-2016)">
           <hr />
         </figure>
@@ -307,10 +307,10 @@
           <hr />
           <h3>Homeless families on CalWORKs in LA County</h3>
           <img large
-            src="../../images/charts/Homeless_families_on_CalWORKs_in_LA_County.png"
+            src="./images/charts/Homeless_families_on_CalWORKs_in_LA_County.png"
             alt="Homeless families on CalWORKs in LA County">
           <img small
-            src="../../images/charts/Homeless_families_on_CalWORKs_in_LA_County_-_SMALL.png"
+            src="./images/charts/Homeless_families_on_CalWORKs_in_LA_County_-_SMALL.png"
             alt="Homeless families on CalWORKs in LA County">
           <hr />
         </figure>
@@ -339,10 +339,10 @@
           <hr />
           <h3>Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs</h3>
           <img large
-            src="../../images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs.png"
+            src="./images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs.png"
             alt="Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs">
           <img small
-            src="../../images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL.png"
+            src="./images/charts/Chronically_mentally_ill_homeless_people_compared_to_the_number_of_homeless_families_on_CalWORKs_-_SMALL.png"
             alt="Chronically mentally ill homeless people compared to the number of homeless families on CalWORKs">
           <hr />
         </figure>
@@ -472,10 +472,10 @@
           <hr />
           <h3>Students in public schools who are homeless</h3>
           <img large
-            src="../../images/charts/Students_in_public_schools_who_are_homeless.png"
+            src="./images/charts/Students_in_public_schools_who_are_homeless.png"
             alt="Students in public schools who are homeless">
           <img small
-            src="../../images/charts/Students_in_public_schools_who_are_homeless_-_SMALL.png"
+            src="./images/charts/Students_in_public_schools_who_are_homeless_-_SMALL.png"
             alt="Students in public schools who are homeless">
           <hr />
         </figure>
@@ -503,10 +503,10 @@
 
         <div share>
           <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+            <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
           <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+            <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
 
@@ -573,10 +573,10 @@
           <hr />
           <h3>Maximum monthly CalWORKs check or a family of three in California (1 adult + 2 children)</h3>
           <img large
-            src="../../images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
+            src="./images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
             alt="Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16">
           <img small
-            src="../../images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
+            src="./images/charts/Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16.png"
             alt="Maxiumum_monthly_CalWORKs_check_for_a_family_of_three_in_California_07-16">
           <hr />
         </figure>
@@ -608,10 +608,10 @@
 
         <div share>
           <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+            <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
           <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+            <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
 
@@ -642,10 +642,10 @@
 
         <div share>
           <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+            <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
           <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+            <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
 
@@ -678,10 +678,10 @@
 
         <div share>
           <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+            <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
           <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+            <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
 
@@ -763,10 +763,10 @@
 
         <div share>
           <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+            <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
           <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+            <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
 
@@ -806,10 +806,10 @@
 
         <div share>
           <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+            <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
           </a>
           <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
-            <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+            <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
           </a>
         </div>
 
@@ -856,10 +856,10 @@
         <section>
           <div share-story>
             <a href="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareFacebook', 'Feature - I See Heroes');">
-              <img src="../../images/ctrl_share-facebook.svg" alt="Share on Facebook">
+              <img src="./images/ctrl_share-facebook.svg" alt="Share on Facebook">
             </a>
             <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fprojects.scpr.org%2Fofficer-involved%2Fstories%2Fi-see-heroes%2F" onClick="ga('send', 'event', 'ois', 'shareTwitter', 'Feature - I See Heroes');">
-              <img src="../../images/ctrl_share-twitter.svg" alt="Share on Twitter">
+              <img src="./images/ctrl_share-twitter.svg" alt="Share on Twitter">
             </a>
           </div>
         </section>
