--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </section>
               <output>
                 <div class="data-loading hidden">
-                  <h3><em>Loading application data</em></h3>
+                  <h3><em id="progress-message">Acquiring location</em></h3>
                   <img src="images/icon_data_loader.gif" alt="Data is loading" width="35%" />
                 </div>
                 <div id="output" class="output-display"></div>
@@ -886,7 +886,7 @@
           </section>
           <output>
             <div class="data-loading hidden">
-              <h3><em>Loading application data</em></h3>
+              <h3><em id="progress-message">Acquiring location</em></h3>
               <img src="images/icon_data_loader.gif" alt="Data is loading" width="35%" />
             </div>
             <div id="output" class="output-display"></div>
